src/test/deca/syntax/invalid/SansObjet/DeclVar-PartialInit.deca
// Description:
//    Declaration of a single variable with improper initialization.
//
// Results:
//    Syntax error
//    11:15 mismatched input ';' expecting {FLOAT, INT, '(', '-', '!', 'false',
//    'null', 'readInt', 'readFloat', 'true', IDENT, STRING, NEW, THIS}
//
// Historique:
//    cree le 07/01/2022

{
        int x =;
}
